welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
var Xmax:Int=getMondeLargeur-1
var Ymax:Int=getMondeHauteur-1
def posFinale:Boolean = {
	if(getX==Xmax && getY==Ymax) {
		return true
	} else {
		return false
	}
}// vérifie si on est en bas à droite

var pas:Int=0
var colonne:Int=0
while (!posFinale) {
	setPos(0,colonne)
	ecritMessage(pas)
	for(nb <- 1 to Ymax) {
		retour
		pas=pas+1
		ecritMessage(pas)
	}
	pas=pas+1
}
}
